[package]
name = "rusticata"
version = "0.1.0"
description = "Protocol decoders and parsers for network analyzers"
license = "LGPL-2.1+"
keywords = ["Suricata","IDS","TLS","SSL","protocol","parser","nom"]
homepage = "https://github.com/rusticata/rusticata"
repository = "https://github.com/rusticata/rusticata.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"

# [lib]
# crate-type = ["dylib"]
# # crate-type = ["staticlib"]

[dependencies]
log = "0.4.6"
nom = "6.0"
itertools = "0.9"
md5 = "0.7"
der-parser = "5.0.0"
dhcp4r = "0.2.1"
dns-parser = "0.8"
httparse = "1.3"
ipsec-parser = "0.6.0"
kerberos-parser = "0.6"
ntp-parser = "0.5"
openvpn-parser = "0.5"
radius-parser = "0.4"
snmp-parser = "0.7"
ssh-parser = "0.4"
tls-parser = "0.10"
x509-parser = "0.9"

[dev-dependencies]
env_logger = "0.8"
hex-literal = "0.3"
